@@ -69,6 +69,7 @@ Changes in Bitbake 1.9.x:
 	- Add mercurial (hg) fetcher from Robert Schuster (#2913)
 	- Don't add duplicates to BBPATH
 	- Fix preferred_version return values (providers.py)
+	- Fix 'depends' flag splitting
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
